@@ -49,6 +49,9 @@ bug report - outstanding bugs are listed here:
 0.76: please submit patches for this section with actual code/doc
       patches!
 
+* misc string comparison length checking changes from Nalin. Modules
+  touched, pam_cracklib, pam_listfile, pam_unix, pam_wheel (Bug 476947 -
+  agmorgan)
 * pam_userdb: require that all of typed password matches that in
   database report and fix from Vladimir Pastukhov. (Bug 484252 - agmorgan)
 * pam_malloc: revived malloc debugging code, now tied to
